--- a/styles.css
+++ b/styles.css
@@ -215,7 +215,7 @@ h2 {
 }
 
 .card img {
-  width: auto;
+  width: 100%;
   height: 350px;
   object-fit: cover;
   border-radius: 10px;
@@ -223,6 +223,7 @@ h2 {
   border-radius: 15px;
   border: 3px solid #75b3f1;
   display:flex;
+  transition: transform 0.3s ease;
   
 }
 
