--- a/styles.css
+++ b/styles.css
@@ -206,17 +206,18 @@ h2 {
 }
 /* Image Responsiveness */
 .card img {
-  width: 40%; /* Ensure images fill their container */
+  width: 48%; /* Ensure images fill their container */
   height: auto; /* Maintain aspect ratio */
   object-fit: cover; /* Ensure images cover the available space without distortion */
   border-radius: 15px;
   margin-bottom: 15px;
   border: 3px solid #75b3f1;
+  item-display:center;
 }
 
 /* Gallery Grid Images */
 .gallery-grid img {
-  width: 100%;
+  width: 48%;
   height: auto;
   border-radius: 10px;
   object-fit: cover;
