--- a/styles.css
+++ b/styles.css
@@ -207,7 +207,7 @@ h2 {
 /* Image Responsiveness */
 .card img {
   width: 32%; /* Ensure images fill their container */
-  height: 200px; /* Maintain aspect ratio */
+  height: 400px; /* Maintain aspect ratio */
   object-fit: cover; /* Ensure images cover the available space without distortion */
   border-radius: 15px;
   margin-bottom: 15px;
@@ -218,7 +218,7 @@ h2 {
 /* Gallery Grid Images */
 .gallery-grid img {
   width: 32%;
-  height: auto;
+  height: 400px;
   border-radius: 10px;
   object-fit: cover;
   cursor: pointer; /* Pointer to indicate clickability */
